# Bilidown

./: .gitignore  AGENTS.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  portable.yml
backend/bilidown/: app.py  cookies.py  download_options.py  engine.py  errors.py  http_headers.py  input_parser.py  jobs.py  launcher.py  live.py  live_metadata.py  media_download.py  media_metadata.py  models.py  progress.py  qr_login.py  resource_download.py  resource_resolver.py  security.py  typeguards.py  yt_adapter.py  yt_logging.py
docs/: README.md  architecture.md  building-and-releasing.md  development.md  formats-and-quality.md  getting-started.md  login-and-cookies.md  media-support.md  security-and-privacy.md  troubleshooting.md
docs/en/: README.md  building-and-releasing.md  getting-started.md  login-and-cookies.md  media-support.md
docs/superpowers/specs/: 2026-07-20-bilibili-login-csp-design.md  2026-07-20-bilibili-qr-login-design.md
frontend/: openapi.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/e2e/: app.spec.ts
frontend/src/: App.tsx  api.ts  desktop.ts  i18n.ts  main.tsx  styles.css
frontend/src/components/: AppChrome.tsx  AuthPanel.test.tsx  AuthPanel.tsx  DesktopStartupGate.test.tsx  DesktopStartupGate.tsx  DownloadPanel.tsx  JobList.tsx  LivePanel.test.tsx  LivePanel.tsx  ResourcePreview.test.tsx  ResourcePreview.tsx  VideoPreview.test.tsx  VideoPreview.tsx
frontend/src/hooks/: useAppController.ts  useDesktopLifecycle.ts  useLiveJobs.ts
frontend/src/test/: setup.ts
packaging/: Bilidown-sidecar.spec  FFMPEG_SOURCE.txt  THIRD_PARTY_NOTICES.txt  build-desktop.ps1  build-desktop.sh  build-portable.ps1  build-sidecar.mjs  generate-openapi.mjs  generate-openapi.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backend.rs  desktop.rs  idle.rs  lib.rs  login.rs  main.rs
tests/: test_api.py  test_docs.py  test_engine.py  test_live.py  test_live_metadata.py  test_qr_login.py  test_resource_resolver.py
