[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bilidown-local"
version = "1.0.0"
description = "Local-only Bilibili media downloader and live recorder"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = {text = "MIT"}
authors = [{name = "Arsvine Zhu"}]
dependencies = [
  "fastapi==0.116.1",
  "httpx==0.28.1",
  "python-multipart==0.0.20",
  "qrcode==8.2",
  "uvicorn[standard]==0.35.0",
  "yt-dlp==2026.7.4",
]

[project.optional-dependencies]
dev = [
  "basedpyright==1.39.9",
  "pyinstaller==6.14.2",
  "pytest==8.4.1",
  "pytest-asyncio==1.0.0",
]

[project.scripts]
bilidown = "bilidown.launcher:main"

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.basedpyright]
include = ["backend/bilidown"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportAny = "error"
reportExplicitAny = "error"
reportIgnoreCommentWithoutRule = "error"
reportUnusedFunction = "none"
