[package]
name = "bilidown-desktop"
version = "1.0.0"
description = "Bilidown desktop shell"
authors = ["Arsvine Zhu"]
edition = "2024"
rust-version = "1.85"

[lib]
name = "bilidown_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "bilidown-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.11.5", features = ["image-png", "tray-icon"] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-single-instance = "2.4.3"
tokio = { version = "1.47.1", features = ["time"] }
uuid = { version = "1.18.1", features = ["v4"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
expect_used = "deny"
